# sycl-playground

./: CMakeLists.txt  sycl-playground.cpp
